Add health route
